# NAS-ROM-Manager

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bun.lockb  package.json  svelte.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: .env.example  docker-compose.yml  sample.env
docker/scripts/: start.sh
docs/: bun.lockb
docs/.vitepress/: config.mts
docs/pages/: acknowledgements.md  building-nrm.md  contributing.md  index.md  introduction.md
parsers/: gb.json  gba.json  gbc.json  gc.json  n3ds.json  n64.json  nds.json  nes.json  ps.json  ps2.json  ps3.json  psp.json  psvita.json  snes.json  switch.json  wii.json  wiiu.json  xbox.json  xbox360.json
server/: .gitignore  Cargo.toml  Dockerfile
server/parsers/: gb.json  gba.json  gbc.json  gc.json  n3ds.json  n64.json  nds.json  nes.json  ps.json  ps2.json  ps3.json  psp.json  (+7 more)
src/: app.css  app.html  hooks.client.ts  material-styles.css
src-rust/: .gitignore  Cargo.toml
src-rust/src/: auth.rs  library_manager.rs  main.rs  manager.rs  settings.rs  types.rs  utils.rs  watcher.rs  ws_handler.rs
src-rust/src/rest/: covers.rs  grids.rs  mod.rs  rom_download.rs  rom_upload.rs  sgdb.rs  types.rs
src-rust/src/rest/igdb/: igdb_client.rs  mod.rs  twitch_auth.rs
src-rust/src/rest/types/: igdb.rs  mod.rs  sgdb.rs
src-rust/src/restful/: covers.rs  mod.rs  rom_download.rs  rom_upload.rs  roms.rs  types.rs  zip.rs
src-rust/src/websocket/: file_picker.rs  library_manager.rs  metadata.rs  mod.rs  parsers.rs  settings.rs  sgdb.rs  types.rs  utils.rs  watcher.rs  ws_handler.rs
src-rust/src/websocket/types/: args.rs  file_picker.rs  library.rs  mod.rs  settings.rs  sgdb.rs
web/: .dockerignore  .env.development  .env.production  Dockerfile  package.json  svelte.config.js
(+362 files in other folders)
