[package]
name = "nas-rom-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
rayon = "1.10.0"

chrono = "0.4.39"
notify = "6.1.1"
glob = "0.3.2"
diacritics = "0.2.2"
regex = "1.11.1"
rust-crypto = "0.2.36"

log = "0.4.22"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"