[package]
name = "nas-rom-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
futures = "0.3.31"
futures-util = "0.3"
rayon = "1.10.0"

chrono = "0.4.39"
notify = "6.1.1"
wax = "0.6.0"
diacritics = "0.2.2"
regex = "1.11.1"
rust-crypto = "0.2.36"
reqwest="0.12.12"

log = "0.4.22"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"