[package]
name = "nas-rom-manager-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
warp = { version = "0.3.7", features = ["tls"] }
futures = "0.3.31"
futures-util = "0.3"

notify = "6.1.1"
wax = "0.6.0"
regex = "1.11.1"
reqwest="0.12.12"
bytes = "1.9.0"
async_zip = { version = "0.0.17", features = ["full"] }
rust-crypto = "0.2.36"
sanitize-filename="0.6.0"

log = "0.4.22"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
chrono = "0.4.39"
cron = "0.15.0"